--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,3 @@
 {
-    "python.linting.pylintEnabled": true,
-    "python.linting.enabled": true,
-    "python.pythonPath": "hw_venv/bin/python"
+    "python.defaultInterpreterPath": "./venv/bin/python"
 }
